add controller mapstruct wagger